# mitm2openapi

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  flake.nix  release-plz.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bench.yml  ci.yml  demo-gif.yml  docs.yml  fuzz.yml  integration-level1.yml  integration-level2.yml  release-plz.yml  release.yml
book/: book.toml
book/src/: SUMMARY.md  changelog.md  introduction.md
book/src/formats/: har.md  mitmproxy.md
book/src/getting-started/: capturing.md  installation.md  quick-start.md
book/src/reference/: benchmarks.md  diagnostics.md  security.md
book/src/usage/: cli-reference.md  filtering.md  pipeline.md  reports.md  resource-limits.md  strict-mode.md
ci/demo/: Makefile  build-gif.sh  docker-compose.mitmproxy2swagger.yml  package-lock.json  package.json  phase1.spec.ts  phase2.tape  phase3.spec.ts  playwright.config.ts
ci/demo/fixtures/: demo.flow
ci/petstore/: application.properties  seed.sh
docs/: benchmarks.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: tnetstring.rs
scripts/: generate_fixtures.py  stage-cleanup.sh  stage-prep.sh
src/: builder.rs  cli.rs  error.rs  har_reader.rs  lib.rs  main.rs  mitmproxy_reader.rs  output.rs  params.rs  path_matching.rs  report.rs  schema.rs  tnetstring.rs  type_hints.rs  types.rs
testdata/expected/: multi.yaml  post_json.yaml  simple_get.yaml
testdata/flows/: corrupt.flow  multi_status.flow  multiple.flow  no_response.flow  non_utf8.flow  post_form.flow  post_json.flow  simple_get.flow
testdata/har/: base64_body.har  multi.har  simple.har
tests/: cli_param_regex_removed.rs  merge_responses.rs  output_atomic.rs  report.rs  security.rs  strict_mode.rs
tests/fixtures/poc/: README.md
tests/golden/: crapi-openapi.yaml  petstore-v3.yaml
tests/integration/level1/: README.md  diff-naive.sh  diff-strict.sh  docker-compose.yml  run.sh
tests/integration/level2/: Makefile  README.md  docker-compose.yml  normalize.sh  oasdiff.config.yaml  package-lock.json  package.json  (+2 more)
(+14 files in other folders)
