[package]
name = "mitm2openapi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mitm2openapi"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
har = "0.9"
openapiv3 = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
indexmap = { version = "2", features = ["serde"] }
regex = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
rmp-serde = "1"

[dev-dependencies]
proptest = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
pretty_assertions = "1"
