[package]
name = "mitm2openapi"
version = "0.3.0"
edition = "2021"
authors = ["Arkptz <arkptz@gmail.com>"]
description = "Convert mitmproxy flow dumps and HAR files to OpenAPI 3.0 specs — fast Rust rewrite of mitmproxy2swagger"
license = "MIT"
repository = "https://github.com/Arkptz/mitm2openapi"
homepage = "https://github.com/Arkptz/mitm2openapi"
documentation = "https://docs.rs/mitm2openapi"
readme = "README.md"
keywords = ["openapi", "mitmproxy", "har", "swagger", "api"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
rust-version = "1.88"
exclude = [
  "ci/**", "tests/integration/**", "testdata/**",
  "docs/demo.mp4", ".github/**", "scripts/**",
  "flake.nix", "flake.lock", ".envrc", ".direnv/**",
  ".sisyphus/**", ".ruff_cache/**",
]

[[bin]]
name = "mitm2openapi"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
har = "0.9"
openapiv3 = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
indexmap = { version = "2", features = ["serde"] }
regex = "1"
thiserror = "2"
base64 = "0.22"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
rmp-serde = "1"
globset = "0.4"
tempfile = "3"

[dev-dependencies]
proptest = "1"
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
